# ipecmd-wrapper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  MPLABXLog.xml  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  setup_dev.py  test.hex  tox.ini
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
docs/: api.md  changelog.md  cli.md  configuration.md  contributing.md  development.md  examples.md  index.md  installation.md  license.md  quickstart.md  reference.md
ipecmd_wrapper/: __init__.py  __main__.py  cli.py  core.py  logger.py
tests/: __init__.py  test_cli.py  test_compatibility.py  test_core.py  test_integration.py  test_performance.py
