[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipecmd-wrapper"
version = "0.1.0"
description = "IPECMD Wrapper for PIC Microcontroller Programming"
authors = [
    {name = "Sébastien Celles", email = "s.celles@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ipecmd", "pic", "microcontroller", "programming", "embedded", "pickit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = [
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/s-celles/ipecmd-wrapper"
Repository = "https://github.com/s-celles/ipecmd-wrapper"
Issues = "https://github.com/s-celles/ipecmd-wrapper/issues"

[project.scripts]
ipecmd-wrapper = "ipecmd_wrapper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipecmd_wrapper*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
